--- a/riddles.html
+++ b/riddles.html
@@ -1,3 +1,5 @@
+<title>riddles</title>
+
 <script type="text/javascript">
     google_ad_client = "ca-pub-9837147005364991";
     google_ad_slot = "5665082867";
